examples/v0.4/errors/property_array_type_mismatch.nova
User: M = {
    skills: [S]
}

user: User = {
    skills = [
        "Python"
    ]
}

user.skills[0] = 123

/*
Expected Error:

Datatype mismatch.
*/